--- a/Product.API/appsettings.json
+++ b/Product.API/appsettings.json
@@ -5,6 +5,7 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "API_url": "https://localhost:7275/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=DESKTOP-H81TEQJ\\CSDLPT8;Database=ProductsAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
