--- a/Product.Core/Product.Core.csproj
+++ b/Product.Core/Product.Core.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
