Basket with Redis DB

--- a/Product.API/appsettings.json
+++ b/Product.API/appsettings.json
@@ -8,6 +8,7 @@
   "API_url": "https://localhost:7275/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-H81TEQJ\\CSDLPT8;Database=ProductsAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
+    "DefaultConnection": "Server=DESKTOP-H81TEQJ\\CSDLPT8;Database=ProductsAPI;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True",
+   "Redis": "localhost"
   }
 }
