--- a/Product.Core/Product.Core.csproj
+++ b/Product.Core/Product.Core.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
+    <PackageReference Include="StackExchange.Redis"  Version="2.7.17" />
   </ItemGroup>
 
 </Project>
