Identity, JWT Authorize

--- a/Product.API/appsettings.json
+++ b/Product.API/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Token": {
+    "Key": "dGT+GNsKMZBH3sI4DjenCO4p/DccNLNy3YiCFXpG4Bk=",
+    "Issuer": "https://localhost:7275/"
+  },
   "API_url": "https://localhost:7275/",
   "AllowedHosts": "*",
   "ConnectionStrings": {
