--- a/Product.Core/Product.Core.csproj
+++ b/Product.Core/Product.Core.csproj
@@ -11,8 +11,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.32" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Features" Version="2.2.0" />
-    <PackageReference Include="StackExchange.Redis"  Version="2.7.17" />
+    <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="6.0.32" />
+    <PackageReference Include="Microsoft.IdentityModel.JsonWebTokens" Version="6.36.0" />
+    <PackageReference Include="StackExchange.Redis" Version="2.7.17" />
   </ItemGroup>
 
 </Project>
